log/build_2025-07-29_18-15-25/strategy/stderr.log
  File "/workspace/towen/install/strategy/lib/python3.10/site-packages/strategy/ar/ar.py", line 91
    else:
    ^^^^
SyntaxError: invalid syntax

